update p-card slider

--- a/app/assets/views/p-card.pug
+++ b/app/assets/views/p-card.pug
@@ -12,15 +12,32 @@ block content
                 .button-prev
                 .swiper-wrapper
                     .swiper-slide
-                        img(src="img/content/p-card/slider_0/slide_0.png")
+                        img(src="img/content/p-card/slider_0/slide_0.jpg")
                     .swiper-slide
-                        img(src="img/content/p-card/slider_0/slide_1.png")
+                        img(src="img/content/p-card/slider_0/slide_1.jpg")
                     .swiper-slide
-                        img(src="img/content/p-card/slider_0/slide_2.png")
+                        img(src="img/content/p-card/slider_0/slide_2.jpg")
                     .swiper-slide
-                        img(src="img/content/p-card/slider_0/slide_3.png")
+                        img(src="img/content/p-card/slider_0/slide_3.jpg")
                     .swiper-slide
-                        img(src="img/content/p-card/slider_0/slide_4.png")
+                        img(src="img/content/p-card/slider_0/slide_4.jpg")
+                    .swiper-slide
+                        img(src="img/content/p-card/slider_0/slide_5.jpg")
+                    .swiper-slide
+                        img(src="img/content/p-card/slider_0/slide_6.jpg")
+                    .swiper-slide
+                        img(src="img/content/p-card/slider_0/slide_7.jpg")
+                    .swiper-slide
+                        img(src="img/content/p-card/slider_0/slide_8.jpg")
+                    .swiper-slide
+                        img(src="img/content/p-card/slider_0/slide_9.jpg")
+                    .swiper-slide
+                        img(src="img/content/p-card/slider_0/slide_10.jpg")
+                    .swiper-slide
+                        img(src="img/content/p-card/slider_0/slide_11.jpg")
+                    .swiper-slide
+                        img(src="img/content/p-card/slider_0/slide_12.jpg")
+                        
             .swiper.product-card__swiper-side
                 .button-next
                 .button-prev
@@ -54,15 +71,31 @@ block content
                 .button-prev
                 .swiper-wrapper
                     .swiper-slide
-                        img(src="img/content/p-card/slider_0/slide_0.png")
+                        img(src="img/content/p-card/slider_0/slide_0.jpg")
                     .swiper-slide
-                        img(src="img/content/p-card/slider_0/slide_1.png")
+                        img(src="img/content/p-card/slider_0/slide_1.jpg")
                     .swiper-slide
-                        img(src="img/content/p-card/slider_0/slide_2.png")
+                        img(src="img/content/p-card/slider_0/slide_2.jpg")
                     .swiper-slide
-                        img(src="img/content/p-card/slider_0/slide_3.png")
+                        img(src="img/content/p-card/slider_0/slide_3.jpg")
                     .swiper-slide
-                        img(src="img/content/p-card/slider_0/slide_4.png")
+                        img(src="img/content/p-card/slider_0/slide_4.jpg")
+                    .swiper-slide
+                        img(src="img/content/p-card/slider_0/slide_5.jpg")
+                    .swiper-slide
+                        img(src="img/content/p-card/slider_0/slide_6.jpg")
+                    .swiper-slide
+                        img(src="img/content/p-card/slider_0/slide_7.jpg")
+                    .swiper-slide
+                        img(src="img/content/p-card/slider_0/slide_8.jpg")
+                    .swiper-slide
+                        img(src="img/content/p-card/slider_0/slide_9.jpg")
+                    .swiper-slide
+                        img(src="img/content/p-card/slider_0/slide_10.jpg")
+                    .swiper-slide
+                        img(src="img/content/p-card/slider_0/slide_11.jpg")
+                    .swiper-slide
+                        img(src="img/content/p-card/slider_0/slide_12.jpg")
             .swiper.product-card__swiper-main
                 .button-next
                 .button-prev
