--- a/dest/styles/app.css
+++ b/dest/styles/app.css
@@ -2217,7 +2217,7 @@ body .popup-window.popup-window-with-titlebar .popup-window-buttons .btn:last-ch
   margin-top: -100px;
   border-radius: 48px 48px 0 0;
   padding: 40px 16px;
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0.5) -9.8%, #FFFFFF 54.69%, rgba(255, 255, 255, 0.5) 108.53%), linear-gradient(0deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5));
+  background: #fff;
   box-shadow: 0px 0px 32px 0px #4817331F;
   border: 2px solid #FFFFFF;
 }
@@ -3524,6 +3524,7 @@ body .popup-window.popup-window-with-titlebar .popup-window-buttons .btn:last-ch
 
   .product-card__wrapper {
     padding: 64px;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0.5) -9.8%, #FFFFFF 54.69%, rgba(255, 255, 255, 0.5) 108.53%),linear-gradient(0deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5));
   }
 
   .product-card__annonce {
